--- a/tank.html
+++ b/tank.html
@@ -24,7 +24,8 @@ body
 </head>
 
 <body>
-<script type="text/javascript" src="base.js"></script>
+<script type="text/javascript" src="Base.js"></script>
+<script type="text/javascript" src="Tank.js"></script>
 <script type="text/javascript" src="UI.js"></script>
 <script type="text/javascript" src="App.js"></script> 
 <script type="text/javascript">
